<resources>
    <string name="app_name">微信红包</string>
    <string name="app_description">∠( ᐛ 」∠)_使用指南∠( ᐛ 」∠)_\n\n ○ 狠戳插件开关\n ○ 回到微信聊天\n ○ 坐等红包进账\n\n 遇到问题, 欢迎通过 GitHub Issue 反馈~\n https://github.com/kingwang666/WeChatLuckyMoney</string>
    <string name="preference">偏好设置</string>
    <string name="update_error">遇到一些问题,请前往GitHub手动更新喵(ฅ´ω`ฅ)</string>
    <string name="update_new_seg1">发现新版本(</string>
    <string name="update_new_seg3">),请进入设置完成更新(ฅ´ω`ฅ)</string>
    <string name="update_already_latest">已经是最新版本了(❁´▽`❁)</string>
    <string name="service_off">关闭插件</string>
    <string name="service_on">开启插件</string>
    <string name="url_github_issues">https://github.com/kingwang666/WeChatLuckyMoney/issues</string>
    <string name="community">社区</string>
    <string name="settings">设置</string>
    <string name="github_1">在 GitHub 上</string>
    <string name="github_2">本项目，支持应用开源</string>
    <string name="star_2">Star</string>
    <string name="star_1">★</string>
    <string name="turn_on_toast">点击「微信红包」</string>
    <string name="turn_on_error_toast">遇到一些问题,请手动打开系统设置>无障碍服务>微信红包(ฅ´ω`ฅ)</string>
    <string name="webview_github_title">GitHub 项目主页</string>
    <string name="watch_options">监视选项</string>
    <string name="watch_notifications">监视系统通知</string>
    <string name="watch_notifications_hint">读取新消息通知中的红包提示并进入聊天页</string>
    <string name="watch_list">监视聊天列表</string>
    <string name="watch_list_hint">读取聊天列表中的红包提示并进入聊天页</string>
    <string name="exclude_exclusive">排除专属红包</string>
    <string name="exclude_exclusive_hint">排除聊天中的专属红包</string>
    <string name="only_last_hint">只监控列表最后一个红包信息</string>
    <string name="only_last">只监控最新红包</string>
    <string name="anti_block_options">防封号选项</string>
    <string name="auto_open_packets">自动拆开红包</string>
    <string name="open_with_delay">延时拆开红包</string>
    <string name="open_self">拆开自己发的红包</string>
    <string name="open_after_back">拆开后自动返回</string>
    <string name="about">关于应用</string>
    <string name="check_new_version">检查新版本</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="help_hint">前往GitHub项目主页提交issue</string>
    <string name="checking_new_version">正在检查新版本……</string>
    <string name="delay_instantly">立即拆开红包</string>
    <string name="delay_delay">延迟%d秒拆开红包</string>
    <string name="d">延迟0秒拆开红包</string>
    <string name="todo">TODO</string>
    <string name="interrupt">服务已中断</string>

    <string name="service_on_notification">开始通知监听服务</string>
    <string name="service_off_notification">关闭通知监听服务</string>
    <string name="service_snooze_notification">暂停通知监听服务</string>
    <string name="service_unsnooze_notification">继续通知监听服务</string>
    <string name="keep_screen_on">保持唤醒状态</string>
    <string name="keep_screen_on_hint">保持唤醒状态,将会极大增加电量消耗,请谨慎使用</string>
    <string name="update">升级</string>
    <string name="new_version">新版本(%s)</string>
    <string name="new_version_prerelease">新预发版本(%s)</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="pause">服务已暂停</string>
    <string name="resume">服务已恢复运行</string>
    <string name="white_list_hint">将此应用加入白名单防止进程被杀</string>
    <string name="white_list">白名单</string>
    <string name="battery_optimization_hint">将此电池优化关闭防止进程被杀</string>
    <string name="battery_optimization">电池优化</string>
    <string name="battery_optimization_message">当前开启了电池优化，是否关闭？</string>
    <string name="notification_permission">通知权限</string>
    <string name="notification_permission_message">未获取到通知权限。是否给予权限？</string>
    <string name="warrning_notication_running">通知服务会一直运行。只能手动关闭！！！</string>
    <string name="warrning_notication_pause">暂停功能只支持Android7.0及以上</string>
    <string name="error_notication_running">通知监听服务运行中，请关闭</string>

</resources>