<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:icon="@null"
    tools:context=".SettingsActivity">
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/watch_options">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_watch_notification"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/watch_notifications_hint"
            android:title="@string/watch_notifications" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_watch_list"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/watch_list_hint"
            android:title="@string/watch_list" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/anti_block_options">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_watch_chat"
            android:layout="@layout/preference_checkbox"
            android:title="@string/auto_open_packets" />
        <xyz.monkeytong.hongbao.activities.SeekBarPreference
            pref_kind="pref_open_delay"
            android:key="pref_open_delay"
            android:layout="@layout/preference_checkbox"
            android:title="@string/open_with_delay" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_watch_self"
            android:layout="@layout/preference_checkbox"
            android:title="@string/open_self" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_open_after_back"
            android:layout="@layout/preference_checkbox"
            android:title="@string/open_after_back" />
        <EditTextPreference
            android:key="pref_watch_exclude_words"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_watch_exclude_words_summary"
            android:title="@string/skip_phrases" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_keep_screen_on"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/keep_screen_on_hint"
            android:title="@string/keep_screen_on" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/about">

        <Preference
            android:key="pref_add_white"
            android:layout="@layout/preference_checkbox"
            android:summary="将此应用加入白名单防止进程被杀"
            android:title="白名单" />

        <Preference
            android:key="pref_etc_check_update"
            android:layout="@layout/preference_checkbox"
            android:summary="http://dwz.cn/WeChatLuckyMoney"
            android:title="@string/check_new_version" />
        <Preference
            android:key="pref_etc_issue"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/help_hint"
            android:title="@string/help_and_feedback" />
    </PreferenceCategory>
    <!--    <PreferenceCategory-->
    <!--            android:title="@string/labs"-->
    <!--            android:layout="@layout/preference_category">-->
    <!--        <CheckBoxPreference-->
    <!--                android:key="pref_keep_screen_on"-->
    <!--                android:title="@string/keep_screen_on"-->
    <!--                android:summary="@string/keep_screen_on_hint"-->
    <!--                android:layout="@layout/preference_checkbox"-->
    <!--                android:defaultValue="false"/>-->
    <!--    </PreferenceCategory>-->
</PreferenceScreen>